@@ -43,8 +43,10 @@ class EventsListBlock {
 
     ob_start();
     try {
+      $showMoreUrl = Settings::getUrl();
       if ($groupName) {
         $events = GraphQlClient::get_upcoming_events_by_group_name($url, (int) $eventsCount, $groupName);
+        $showMoreUrl .= '/@' . $groupName . '/events';
       } else {
         $events = GraphQlClient::get_upcoming_events($url, (int) $eventsCount);
       }
